# policyengine-uk-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LEGISLATIVE_REFERENCE.md  SKILL.md  build_package.sh  pyproject.toml  setup.py
.github/: bump_version.py  publish-git-tag.sh
api/: __init__.py  main.py  modal_app.py  pyproject.toml  requirements.txt  security.py  upload_frs.py
app/: next.config.ts
app/lib/: api.ts  (+3 more)
changelog.d/: 1.added  2.fixed  3.added  4.fixed  5.fixed  6.fixed  7.fixed  8.changed  fix-python-cli-flags.fixed  gcs-lcfs-spi-was.added  hbai-poverty-definitions.added  lcfs-income-weights-spi-was-2026.changed  multi-dataset-simulation.added  republish.fixed  structural-reform-hooks.added  sync-simulation-result-spi.fixed
examples/: hicbc_data.json  hicbc_marginal_rates.html  hicbc_marginal_rates.py
parameters/: 1994_95.yaml  1995_96.yaml  1996_97.yaml  1997_98.yaml  1998_99.yaml  1999_00.yaml  2000_01.yaml  2001_02.yaml  2002_03.yaml  2003_04.yaml  2004_05.yaml  2005_06.yaml  2006_07.yaml  2007_08.yaml  2008_09.yaml  2009_10.yaml  2010_11.yaml  2011_12.yaml  2012_13.yaml  2013_14.yaml  2014_15.yaml  2015_16.yaml  2016_17.yaml  2017_18.yaml  2018_19.yaml  2019_20.yaml  2020_21.yaml  2021_22.yaml  2022_23.yaml  2023_24.yaml  2024_25.yaml  2025_26.yaml  2026_27.yaml  2027_28.yaml  2028_29.yaml  2029_30.yaml
policyengine_uk_compiled/: __init__.py  engine.py  models.py
reforms/: add_50p_rate.yaml  combined_example.yaml  progressive_package.yaml  raise_pa_20k.yaml  wales_green_manifesto.yaml
scripts/: rebuild_all.py  uprate_and_upload.py  (+1 more)
src/: main.rs
(+83 files in other folders)
